# simple-chain

./: Dockerfile  README.md  database.py  docker_commands.txt  fly.toml  main.py  open_ai_funcs.py  pyproject.toml  rag.py  simple_chain.py  tool_chain.py
app/: server.py
embeddings/: chroma.sqlite3
pages/: chat_ws.html  conversation.html  demo.html  index.html  response.html
static/: index.html
